<resources>
    <string name="app_name">Movies App</string>


    <string name="sort_settings">Sort Movies</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Select sorting type</string>
    <string-array name="sort_types">
        <item>Most Popular</item>
        <item>Top Rated</item>
    </string-array>
    <string name="movie_image">Movie Image</string>
    <string name="rating">Rating</string>
    <string name="title">Title</string>
    <string name="movie_title">Movie Title</string>
    <string name="overview">Overview</string>
    <string name="date">Date</string>
</resources>
