<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <ImageView
                android:id="@+id/poster_img"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_weight="3"
                android:contentDescription="@string/movie_image"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="3"
                android:text="@string/rating"
                android:textSize="20sp"
                android:textStyle="bold" />




        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear"
            android:padding="15dp"
            android:text="@string/movie_title"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/release_date"
            android:textColor="@android:color/black"
            android:layout_below="@id/title"
            android:text="@string/date"
            android:padding="15dp"
            />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/release_date"
            android:padding="15dp"
            android:text="@string/overview" />


    </RelativeLayout>
</ScrollView>